fixed element gap when dragging multiple items
- Updated react-dnd dependency
- DraggableListItem control is now a functional component
- Removed redundant dragPreview component

--- a/src/stylesheets/vortex/page-mod-load-order.scss
+++ b/src/stylesheets/vortex/page-mod-load-order.scss
@@ -26,11 +26,6 @@
       gap: 4px;
       margin: 0;      
       padding: 0 8px 0 0; // padding between scrollbar and list items
-      
-      #draggable-list-drag-preview {
-        opacity: 0.5;
-        border: 3px solid white;
-      }
     }
 
     .fblo-spinner-container {
